--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/datastore": "^7.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
