--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
+    "@googlemaps/markerclusterer": "^2.0.8",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "haversine-distance": "^1.2.1",
     "express-session": "^1.17.3",
+    "haversine-distance": "^1.2.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
